--- a/project980404/index.html
+++ b/project980404/index.html
@@ -64,7 +64,7 @@
                     دستگاها شده اند.
                 </p>
                 <button type="button" class="btn btn-warning">مقالات</button>
-                <button type="button" class="btn btn-danger">دوره ها</button>
+                <button type="button" class="btn btn-danger rounded-right">دوره ها</button>
             </div>
         </div>
         <div class="middleRows w-100 pt-4 pb-5">
@@ -83,8 +83,8 @@
                         </div>
                         <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
                             <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
                             <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
                         </div>
                     </div>
@@ -101,8 +101,8 @@
                         </div>
                         <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
                             <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
                             <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
                         </div>
                     </div>
@@ -119,64 +119,8 @@
                         </div>
                         <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
                             <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
-                            <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row pt-4">
-                    <div class="col-md-4 text-center">
-                        <img src="Bootstrap.png" class="w-100  border border-black rounded-top" alt="Bootstrap image">
-                        <div class="document px-4 pt-3 border border-black border-top-0">
-                            <h5 class="text-right">دوره بوت استرپ</h5>
-                            <p class="text-right py-1">
-                                توجه به افزایش تولید و فراگیر شدن استفاده از اسمارت فون ها و تبلت ها در چند سال اخیر و
-                                رابطه مستقیم آنها با دنیای مجازی و اینترنت مدیران و طراحان وب سایت ها ناچار به تعامل
-                                مطلوب
-                                با این نوع دستگاها شده اند.
-                            </p>
-                        </div>
-                        <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
-                            <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
-                            <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 text-center">
-                        <img src="Bootstrap.png" class="w-100  border border-black rounded-top" alt="Bootstrap image">
-                        <div class="document px-4 pt-3 border border-black border-top-0">
-                            <h5 class="text-right">دوره بوت استرپ</h5>
-                            <p class="text-right py-1">
-                                توجه به افزایش تولید و فراگیر شدن استفاده از اسمارت فون ها و تبلت ها در چند سال اخیر و
-                                رابطه مستقیم آنها با دنیای مجازی و اینترنت مدیران و طراحان وب سایت ها ناچار به تعامل
-                                مطلوب
-                                با این نوع دستگاها شده اند.
-                            </p>
-                        </div>
-                        <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
-                            <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
-                            <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 text-center">
-                        <img src="Bootstrap.png" class="w-100  border border-black rounded-top" alt="Bootstrap image">
-                        <div class="document px-4 pt-3 border border-black border-top-0">
-                            <h5 class="text-right">دوره بوت استرپ</h5>
-                            <p class="text-right py-1">
-                                توجه به افزایش تولید و فراگیر شدن استفاده از اسمارت فون ها و تبلت ها در چند سال اخیر و
-                                رابطه مستقیم آنها با دنیای مجازی و اینترنت مدیران و طراحان وب سایت ها ناچار به تعامل
-                                مطلوب
-                                با این نوع دستگاها شده اند.
-                            </p>
-                        </div>
-                        <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
-                            <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
                             <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
                         </div>
                     </div>
@@ -195,8 +139,8 @@
                         </div>
                         <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
                             <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
                             <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
                         </div>
                     </div>
@@ -213,8 +157,8 @@
                         </div>
                         <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
                             <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
                             <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
                         </div>
                     </div>
@@ -231,8 +175,64 @@
                         </div>
                         <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
                             <button type="button"
-                                class="btn text-success border-success border-left-0 rounded-right">نمایش</button><button
-                                type="button" class="btn text-danger border-danger rounded-left">ویرایش</button>
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
+                            <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-4">
+                    <div class="col-md-4 text-center">
+                        <img src="Bootstrap.png" class="w-100  border border-black rounded-top" alt="Bootstrap image">
+                        <div class="document px-4 pt-3 border border-black border-top-0">
+                            <h5 class="text-right">دوره بوت استرپ</h5>
+                            <p class="text-right py-1">
+                                توجه به افزایش تولید و فراگیر شدن استفاده از اسمارت فون ها و تبلت ها در چند سال اخیر و
+                                رابطه مستقیم آنها با دنیای مجازی و اینترنت مدیران و طراحان وب سایت ها ناچار به تعامل
+                                مطلوب
+                                با این نوع دستگاها شده اند.
+                            </p>
+                        </div>
+                        <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
+                            <button type="button"
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
+                            <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img src="Bootstrap.png" class="w-100  border border-black rounded-top" alt="Bootstrap image">
+                        <div class="document px-4 pt-3 border border-black border-top-0">
+                            <h5 class="text-right">دوره بوت استرپ</h5>
+                            <p class="text-right py-1">
+                                توجه به افزایش تولید و فراگیر شدن استفاده از اسمارت فون ها و تبلت ها در چند سال اخیر و
+                                رابطه مستقیم آنها با دنیای مجازی و اینترنت مدیران و طراحان وب سایت ها ناچار به تعامل
+                                مطلوب
+                                با این نوع دستگاها شده اند.
+                            </p>
+                        </div>
+                        <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
+                            <button type="button"
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
+                            <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img src="Bootstrap.png" class="w-100  border border-black rounded-top" alt="Bootstrap image">
+                        <div class="document px-4 pt-3 border border-black border-top-0">
+                            <h5 class="text-right">دوره بوت استرپ</h5>
+                            <p class="text-right py-1">
+                                توجه به افزایش تولید و فراگیر شدن استفاده از اسمارت فون ها و تبلت ها در چند سال اخیر و
+                                رابطه مستقیم آنها با دنیای مجازی و اینترنت مدیران و طراحان وب سایت ها ناچار به تعامل
+                                مطلوب
+                                با این نوع دستگاها شده اند.
+                            </p>
+                        </div>
+                        <div class="footerDoc text-right py-3 pr-4 border border-black border-top-0 rounded-bottom">
+                            <button type="button"
+                                class="btn btnShow border border-success border-left-0">نمایش</button><button
+                                type="button" class="btn btnEdit text-danger border-danger">ویرایش</button>
                             <p class="cellFooter float-left py-2 pl-3">9 دقیقه</p>
                         </div>
                     </div>
@@ -248,8 +248,7 @@
                         میباشد.</p>
                 </div>
                 <div class="col-md-6">
-                    <a class="document float-left py-5 text-primary decoration-none"
-                        href="#">بازگشت
+                    <a class="document float-left py-5 text-primary decoration-none" href="#">بازگشت
                         به بالای صفحه</a>
                 </div>
             </div>
